# stalker_but_miskolc

./: .gitignore  README.md  stalker_but_miskolc.sln
stalker_but_miskolc/: BodyParts.cpp  BodyParts.h  Building.cpp  Building.h  CMakeLists.txt  Date.cpp  Date.h  Faction.cpp  Faction.h  Factions.cpp  Factions.h  GroupBattle.cpp  GroupBattle.h  Human.cpp  Human.h  Interfaces.h  Item.h  Utils.h  Weapon.h  WorldManager.cpp  WorldManager.h  main.cpp  name.txt  stalker_but_miskolc.vcxproj  stalker_but_miskolc.vcxproj.filters
